# DroidPin

./: .env.example  main.py  pyproject.toml
src/droid_pin/: __init__.py  config.py
src/droid_pin/audio/: __init__.py  chunker.py  extractor.py
src/droid_pin/storage/: __init__.py  database.py
src/droid_pin/transcription/: __init__.py  client.py  processor.py
src/droid_pin/ui/: __init__.py  components.py  pages.py
